--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
 
 input[type="range"] {
     -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 6px;
     background: #334155;
@@ -101,6 +102,7 @@ textarea {
 
 input[type="color"] {
     -webkit-appearance: none;
+    appearance: none;
     border: none;
     width: 30px;
     height: 30px;
@@ -131,7 +133,7 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .control-group {
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.5rem;
 }
 
 .control-label {
